Fixed tag line.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Taylor Brazelton
 description: My Personal Site
 author: Taylor Brazelton
 github: https://github.com/ryanb58
-about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
+about: Software engineer by day and entrepreneur by night.
 # disqus_shortname: taylorbrazelton
 google_analytics: UA-XXXXXXXX-Y
 
