--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,6 @@ compress_html:
   endings: all
   ignore:
     envs: ['development']
+
+plugins: ["jekyll-include-cache"]
+remote_theme: "mmistakes/minimal-mistakes@4.16.6"
