--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
+appdirs==1.4.4
+black==21.5b1
+click==8.0.1
 inflect==5.3.0
+isort==5.8.0
 Jinja2==3.0.1
+livereload==2.6.3
 Markdown==3.3.4
 MarkupSafe==2.0.1
+mypy-extensions==0.4.3
+pathspec==0.8.1
+regex==2021.4.4
+six==1.16.0
 toml==0.10.2
+tornado==6.1
+watchdog==2.1.6
