--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ Markdown==3.3.4
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
+Pygments==2.13.0
+pymdown-extensions==9.9
 regex==2021.4.4
 six==1.16.0
 toml==0.10.2
